--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <form id="cityForm" action="">
     <input type="text" placeholder="Enter city" id="city"/>
-    <input type="submit"/>
+    <input type="button" id="submit" onclick="handleFormSubmit()" value="Submit"/>
   </form>
 
   <h2>Today</h2>
@@ -62,7 +62,7 @@
   <canvas id="WeatherChart"></canvas>
 
   <h2>Five Day Forcast</h2>
-  <aside>
+  <aside id="fiveday">
 
   </aside>
 
